5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1747_3087.log
== TEST (2019-05-16 10:27:28) 
-- CODE:
x = int(input("numero inteiro:"))
y = 0
i = 0
while(x =! 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d, 2))
print(round(e ,2))
-- ERROR:
File "XXXX", line 4
    while(x =! 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:35) 
-- CODE:
x = int(input("numero inteiro:"))
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d, 2))
print(round(e ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(e ,2))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:57) 
-- CODE:
x = int(input("numero inteiro:"))
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d, 2))
print(round(e ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(e ,2))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:34) 
-- CODE:
x = int(input("numero inteiro:"))
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,1))
print(round(e ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(e ,2))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:30) 
-- CODE:
x = int(input("numero inteiro:"))
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(e,2))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:35) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:13) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:34) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:32:58) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- EXECUTION TIME:
0.183118
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
6.86
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:59) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y/i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:12) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(y)
print(round(d,2))
print(round(e,2))
-- OUTPUT:
-30
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:23) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(y)
print(round(d,2))
print(round(e,2))
-- OUTPUT:
-30
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:05) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:39) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y // i
	else:
		y = x + y 
		i = i + 1
		e = y // i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:35) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:46) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		y = y / i
	else:
		y = x + y 
		i = i + 1
		y = y / i
	x = int(input("numero inteiro:"))

print(round(y,2))
print(round(y,2))
-- OUTPUT:
-0.85
-0.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:50) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		y = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:18) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y 
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:20) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:36) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:59) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = f / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:18) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = f / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:48:45) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = f / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- EXECUTION TIME:
0.214658
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
2.29
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.25
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:46) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = f / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:28) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		f = x + f
		i = i + 1
		e = f / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:52:18) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- EXECUTION TIME:
0.141171
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
6.86
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:21) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
i = 0
f = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y
		i = i + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:48) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
f = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		y = x + y
		f = f + 1
		e = y / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:53:29) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
f = 0
q = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		q = x + q
		f = f + 1
		e = q / i
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:53:55) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
f = 0
q = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		q = x + q
		f = f + 1
		e = q / f
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- EXECUTION TIME:
0.132155
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
5.33
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2.5
1.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:54:11) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
f = 0
q = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		q = x + q
		f = f + 1
		e = q / f
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- OUTPUT:
-6.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:54:25) 
-- CODE:
x = int(input("numero inteiro:"))
e = 0
d = 0
y = 0
f = 0
q = 0
i = 0
while(x != 0):
	if(x%2 == 0):
		y = x + y 
		i = i + 1
		d = y / i
	else:
		q = x + q
		f = f + 1
		e = q / f
	x = int(input("numero inteiro:"))

print(round(d,2))
print(round(e,2))
-- EXECUTION TIME:
0.227209
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
5.33
8.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
2.5
1.5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
